--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ jobs:
   timeoutInMinutes: 90
 
   steps:
-    - script: eng/cibuild.cmd -configuration Debug -prepareMachine -testDesktop
+    - script: eng/cibuild.cmd -configuration Debug -prepareMachine -testDesktop -skipAnalyzers
       displayName: Build and Test
 
     - task: PublishTestResults@2
