--- a/azure-pipelines-integration.yml
+++ b/azure-pipelines-integration.yml
@@ -29,7 +29,7 @@ jobs:
   timeoutInMinutes: 135
 
   steps:
-    - script: eng/cibuild.cmd -configuration $(_configuration) -prepareMachine -testVsi
+    - script: eng/cibuild.cmd -configuration $(_configuration) -prepareMachine -testVsi -skipAnalyzers
       displayName: Build and Test
 
     - task: PublishTestResults@2
