Extend profiling inputs drop time to 90 days

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -109,6 +109,7 @@ stages:
         sourcePath: '$(Build.SourcesDirectory)\artifacts\OptProf\$(BuildConfiguration)\Data'
         toLowerCase: false
         usePat: false
+        retentionDays: 90
       displayName: 'OptProf - Publish to Artifact Services - ProfilingInputs'
       condition: succeeded()
 
