Use a proper argument

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,9 +14,10 @@
     },
     {
         "label": "build skip analyzers",
-        "command": "./build.cmd -skipAnalyzers",
+        "command": "./build.cmd",
         "type": "shell",
         "args": [
+          "-skipAnalyzers"
         ],
         "problemMatcher": "$msCompile",
         "group": "build"
