--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -43,7 +43,7 @@ stages:
     - powershell: Write-Host "##vso[task.setvariable variable=VisualStudio.DropName]Products/$(System.TeamProject)/$(Build.Repository.Name)/$(SourceBranchName)/$(Build.BuildNumber)"
       displayName: Setting VisualStudio.DropName variable
 
-    - powershell: git merge origin/master-vs-deps
+    - powershell: git branch -r | select-string "origin/$(Build.SourceBranch)-vs-deps" | select -First 1 | %{ Write-Host "git merge $_" }
       displayName: Merging VS Deps 
       condition: and(succeeded(), variables['NonVSDepsBranch'])
 
