--- a/src/Features/Lsif/Generator/Microsoft.CodeAnalysis.Lsif.Generator.csproj
+++ b/src/Features/Lsif/Generator/Microsoft.CodeAnalysis.Lsif.Generator.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Locator" Version="$(MicrosoftBuildLocatorVersion)" />
+    <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonVersion)" />
     <PackageReference Include="System.CommandLine.Experimental" Version="$(SystemCommandLineExperimentalVersion)" />
   </ItemGroup>
   <ItemGroup>
