Add a basic unit testing infrastructure and a first basic test

--- a/src/Features/Lsif/Generator/Microsoft.CodeAnalysis.Lsif.Generator.csproj
+++ b/src/Features/Lsif/Generator/Microsoft.CodeAnalysis.Lsif.Generator.csproj
@@ -26,4 +26,7 @@
     <ProjectReference Include="..\..\..\Workspaces\CSharp\Portable\Microsoft.CodeAnalysis.CSharp.Workspaces.csproj" />
     <ProjectReference Include="..\..\..\Workspaces\VisualBasic\Portable\Microsoft.CodeAnalysis.VisualBasic.Workspaces.vbproj" />
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="Microsoft.CodeAnalysis.Lsif.Generator.UnitTests" />
+  </ItemGroup>
 </Project>
