--- a/src/VisualStudio/CSharp/Impl/Microsoft.VisualStudio.LanguageServices.CSharp.csproj
+++ b/src/VisualStudio/CSharp/Impl/Microsoft.VisualStudio.LanguageServices.CSharp.csproj
@@ -113,4 +113,74 @@
       <SubType>Designer</SubType>
     </VSCTCompile>
   </ItemGroup>
+  <!-- PkgDef content -->
+  <PropertyGroup>
+    <CSharpPackageGuid>{13c3bbb4-f18f-4111-9f54-a0fb010d9194}</CSharpPackageGuid>
+    <CSharpLanguageServiceGuid>{694dd9b6-b865-4c5b-ad85-86356e9c88dc}</CSharpLanguageServiceGuid>
+    <CSharpOptionPageAdvancedGuid>{8FD0B177-B244-4A97-8E37-6FB7B27DE3AF}</CSharpOptionPageAdvancedGuid>
+    <CSharpOptionPageNamingStyleGuid>{294FBC9C-EF70-4AA0-BD4F-EB0C6A5908D7}</CSharpOptionPageNamingStyleGuid>
+    <CSharpOptionPageIntelliSenseGuid>{EDE66829-7A36-4c5d-8E20-9290195DCF80}</CSharpOptionPageIntelliSenseGuid>
+    <CSharpOptionPageCodeStyleGuid>{EAE577A7-ACB9-40F5-A7B1-D2878C3C7D6F}</CSharpOptionPageCodeStyleGuid>
+    <CSharpOptionPageFormattingGeneralGuid>{DA0446DD-55BA-401F-A364-7D3238412AE4}</CSharpOptionPageFormattingGeneralGuid>
+    <CSharpOptionPageFormattingIndentationGuid>{5E21D017-6D2A-4114-A1F1-C923F001CBBB}</CSharpOptionPageFormattingIndentationGuid>
+    <CSharpOptionPageFormattingNewLinesGuid>{eadc6ad3-91d4-3cc8-be96-3cde7d3080f0}</CSharpOptionPageFormattingNewLinesGuid>
+    <CSharpOptionPageFormattingSpacingGuid>{234FB566-73DD-4612-8DE4-29031FF27052}</CSharpOptionPageFormattingSpacingGuid>
+    <CSharpOptionPageFormattingWrappingGuid>{8E334D9C-B7DC-4CF3-B7B7-014B831FE76B}</CSharpOptionPageFormattingWrappingGuid>
+    <TextManagerPackageGuid>{F5E7E720-1401-11D1-883B-0000F87579D2}</TextManagerPackageGuid>
+    <CSharpTempPECompilerServiceGuid>{DBA64C84-56DF-4E20-8AA6-02332A97F474}</CSharpTempPECompilerServiceGuid>
+    <CSharpReplPackageGuid>{c5edd1ee-c43b-4360-9ce4-6b993ca12897}</CSharpReplPackageGuid>
+    <CSharpInteractiveWindowGuid>{CA8CC5C7-0231-406A-95CD-AA5ED6AC0190}</CSharpInteractiveWindowGuid>
+    <OutputWindowGuid>{34e76e81-ee4a-11d0-ae2e-00a0c90fffc3}</OutputWindowGuid>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProvideRoslynVersionRegistration Include="Microsoft Visual C#" PackageId="$(CSharpPackageGuid)" ProductNameResourceId="116" DetailsResourceId="117"/>
+    
+    <ProvidePackageRegistration Include="$(CSharpReplPackageGuid)" Description="CSharpVsInteractiveWindowPackage" Class="Microsoft.VisualStudio.LanguageServices.CSharp.Interactive.CSharpVsInteractiveWindowPackage" UseManagedResourcesOnly="true" AllowsBackgroundLoading="true"/>
+    <ProvidePackageRegistration Include="$(CSharpPackageGuid)" Description="CSharpPackage" Class="Microsoft.VisualStudio.LanguageServices.CSharp.LanguageService.CSharpPackage" UseManagedResourcesOnly="true" AllowsBackgroundLoading="true"/>
+
+    <ProvideLanguageExtension Include=".cs" LanguageServiceId="$(CSharpLanguageServiceGuid)"/>
+    <ProvideLanguageExtension Include=".csx" LanguageServiceId="$(CSharpLanguageServiceGuid)"/>
+    
+    <ProvideLanguageService Include="CSharp" LanguageServiceId="$(CSharpLanguageServiceGuid)" PackageId="$(CSharpPackageGuid)" LanguageName="CSharp" LanguageResourceId="101" RequestStockColors="true" ShowDropDownOptions="true"/>
+    <ProvideService Include="$(CSharpLanguageServiceGuid)" PackageId="$(CSharpPackageGuid)" ServiceName="C# Language Service" IsAsyncQueryable="true"/>
+    <ProvideService Include="$(CSharpTempPECompilerServiceGuid)" PackageId="$(CSharpPackageGuid)" ServiceName="C# TempPE Compiler Service" IsAsyncQueryable="true"/>
+
+    <ProvideMenuResource Include="$(CSharpReplPackageGuid)" ResourceName="Menus.ctmenu" Version="17"/>
+    <ProvideInteractiveWindow Include="$(CSharpInteractiveWindowGuid)" PackageId="$(CSharpReplPackageGuid)" Orientation="Bottom" Style="Tabbed" Window="$(OutputWindowGuid)"/>
+
+    <!--
+    C# option pages tree:
+      CSharp
+        General (from editor)
+        Scroll Bars (from editor)
+        Tabs (from editor)
+        Advanced
+        Code Style (category)
+          General
+          Formatting (category)
+            General
+            Indentation
+            New Lines
+            Spacing
+            Wrapping
+          Naming
+        IntelliSense
+    -->
+    <ProvideLanguageEditorOptionPage Include="Advanced" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageAdvancedGuid)" LanguageName="CSharp" PageNameResourceId="102" KeywordListResourceId="306" />
+    <ProvideLanguageEditorToolsOptionCategory Include="Code Style" PackageId="$(CSharpPackageGuid)" LanguageName="CSharp" CategoryResourceId="114"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\General" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageCodeStyleGuid)" LanguageName="CSharp" PageNameResourceId="108" KeywordListResourceId="313"/>
+    <ProvideLanguageEditorToolsOptionCategory Include="Code Style\Formatting" PackageId="$(CSharpPackageGuid)" LanguageName="CSharp" CategoryResourceId="107"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\Formatting\General" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageFormattingGeneralGuid)" LanguageName="CSharp" PageNameResourceId="108" KeywordListResourceId="307"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\Formatting\Indentation" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageFormattingIndentationGuid)" LanguageName="CSharp" PageNameResourceId="109" KeywordListResourceId="308"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\Formatting\Wrapping" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageFormattingWrappingGuid)" LanguageName="CSharp" PageNameResourceId="110" KeywordListResourceId="311"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\Formatting\NewLines" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageFormattingNewLinesGuid)" LanguageName="CSharp" PageNameResourceId="111" KeywordListResourceId="309"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\Formatting\Spacing" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageFormattingSpacingGuid)" LanguageName="CSharp" PageNameResourceId="112" KeywordListResourceId="310"/>
+    <ProvideLanguageEditorOptionPage Include="Code Style\Naming" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageNamingStyleGuid)" LanguageName="CSharp" PageNameResourceId= "115" KeywordListResourceId="314"/>
+    <ProvideLanguageEditorOptionPage Include="IntelliSense" PackageId="$(CSharpPackageGuid)" PageGuid="$(CSharpOptionPageIntelliSenseGuid)" LanguageName="CSharp" PageNameResourceId= "103" KeywordListResourceId="312"/>
+
+    <ProvideAutomationProperties Include="$(TextManagerPackageGuid)" Category="TextEditor" Page="CSharp" ProfileNodeLabelId="101" ProfileNodeDescriptionId="106" ResourcePackageGuid="$(CSharpPackageGuid)" />
+    <ProvideAutomationProperties Include="$(CSharpPackageGuid)" Category="TextEditor" Page="CSharp-Specific" ProfileNodeLabelId="104" ProfileNodeDescriptionId="105"/>
+  </ItemGroup>
+
+  <Import Project="$(RepoRoot)eng\targets\PkgDef.targets"/>
 </Project>
