Add an AnalyzerRunner launch configuration for RemoveUnnecessaryCastDiagnosticAnalyzerBase

--- a/src/Tools/AnalyzerRunner/Properties/launchSettings.json
+++ b/src/Tools/AnalyzerRunner/Properties/launchSettings.json
@@ -28,6 +28,10 @@
       "commandName": "Project",
       "commandLineArgs": "$(OutDir)Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /stats /a CSharpSimplifyTypeNamesDiagnosticAnalyzer /editperf:ContentQueryExtensions /edititer:300"
     },
+    "Profile RemoveUnnecessaryCastDiagnosticAnalyzerBase": {
+      "commandName": "Project",
+      "commandLineArgs": "$(OutDir) $(SolutionDir)Roslyn.sln /concurrent /stats /a CSharpRemoveUnnecessaryCastDiagnosticAnalyzer /a VisualBasicRemoveUnnecessaryCastDiagnosticAnalyzer"
+    },
     "Profile FormattingDiagnosticAnalyzer": {
       "commandName": "Project",
       "commandLineArgs": "$(OutDir) $(SolutionDir)Roslyn.sln /stats /a FormattingDiagnosticAnalyzer"
