Revert "Consume centrally trained optprof data (#40510)"
This reverts commit 27ecd825f9aec2a72fa3034d9f379ac19dd27628.

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -8,7 +8,8 @@ resources:
 #  SignType: real
 #  SkipTests: false
 #  SkipApplyOptimizationData: false
-#  IbcDrop: 'default'
+#  IbcSourceBranchName: 'default'
+#  IbcDropId: 'default'
 
 # The variables `_DotNetArtifactsCategory` and `_DotNetValidationArtifactsCategory` are required for proper publishing of build artifacts. See https://github.com/dotnet/roslyn/pull/38259
 variables:
@@ -75,7 +76,8 @@ stages:
                 -officialSkipTests $(SkipTests)
                 -officialSkipApplyOptimizationData $(SkipApplyOptimizationData)
                 -officialSourceBranchName $(SourceBranchName)
-                -officialIbcDrop $(IbcDrop)
+                -officialIbcSourceBranchName $(IbcSourceBranchName)
+                -officialIbcDropId $(IbcDropId)
                 -skipAnalyzers
                 /p:RepositoryName=$(Build.Repository.Name)
                 /p:VisualStudioDropAccessToken=$(System.AccessToken)
