Swap compiler test target frameworks to put netcoreapp first
This will cause local Visual Studio and VS Code test runners to run under
CoreCLR by default. This will only affect tests which are multi-targeted,
which today only includes the compiler unit tests.

--- a/eng/targets/Settings.props
+++ b/eng/targets/Settings.props
@@ -18,6 +18,7 @@
     <ToolsetPackagesDir>$(RepoRoot)build\ToolsetPackages\</ToolsetPackagesDir>
 
     <RoslynPortableTargetFrameworks>net472;netcoreapp2.1</RoslynPortableTargetFrameworks>
+    <RoslynPortableTestFrameworks>netcoreapp2.1;net472</RoslynPortableTestFrameworks>
     <RoslynCheckCodeStyle Condition="'$(ContinuousIntegrationBuild)' != 'true' or '$(RoslynEnforceCodeStyle)' == 'true'">true</RoslynCheckCodeStyle>
     <UseSharedCompilation>true</UseSharedCompilation>
 
