Fix RS0034 by making constructors public

--- a/src/Test/Diagnostics/Roslyn.Hosting.Diagnostics.csproj
+++ b/src/Test/Diagnostics/Roslyn.Hosting.Diagnostics.csproj
@@ -33,6 +33,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <InternalsVisibleTo Include="Microsoft.VisualStudio.IntegrationTest.Utilities" />
     <InternalsVisibleTo Include="Roslyn.VisualStudio.DiagnosticsWindow" />
   </ItemGroup>
   <ItemGroup>
